[gd_scene load_steps=2 format=3 uid="uid://defyp6gcrx7w7"]

[ext_resource type="Script" path="res://Dialog/Dialog_Bubble.gd" id="1_oxb6h"]

[node name="DialogBubbe" type="Control"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_oxb6h")

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(120, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -58.0
offset_right = -133.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
text = "Meowwwww"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PortraitRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="TextLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "fdsfdsaf fdsafdsafds fdsa"
horizontal_alignment = 1
vertical_alignment = 1
